--- a/ForthDemo_v1.csproj
+++ b/ForthDemo_v1.csproj
@@ -60,9 +60,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasePages\BaseAmazonPage.cs" />
-    <Compile Include="PageObjects\HeaderObject\HeaderPartForDelete.cs" />
+    <Compile Include="Enums\Departments.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Interfaces\IClickable.cs" />
+    <Compile Include="PageObjects\ClickableObjects\ClickableObject.cs" />
+    <Compile Include="PageObjects\HeaderObject\AmazonHeaderParts.cs" />
     <Compile Include="PageObjects\HeaderObject\Header.cs" />
-    <Compile Include="PageObjects\HeaderObject\HeaderPart.cs" />
+    <Compile Include="PageObjects\HeaderObject\HeaderParts.cs" />
+    <Compile Include="PageObjects\HeaderObject\NavigationFlyoutSuggestions.cs" />
     <Compile Include="PageObjects\HeaderObject\SearchBar.cs" />
     <Compile Include="PageObjects\InputField.cs" />
     <Compile Include="Pages\AmazonHomePage.cs" />
