--- a/App.config
+++ b/App.config
@@ -3,6 +3,7 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ForthDemo_v1.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="ForthDemo_v1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -10,6 +11,14 @@
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow>
   <userSettings>
+    <ForthDemo_v1.Settings>
+      <setting name="BaseAddress" serializeAs="String">
+        <value>https://www.amazon.co.uk/</value>
+      </setting>
+      <setting name="ShortWaitInSeconds" serializeAs="String">
+        <value>10</value>
+      </setting>
+    </ForthDemo_v1.Settings>
     <ForthDemo_v1.Properties.Settings>
       <setting name="BaseAddress" serializeAs="String">
         <value>https://www.amazon.co.uk/</value>
