--- a/Settings.settings
+++ b/Settings.settings
@@ -1,9 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ForthDemo_v1.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ForthDemo_v1" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="BaseAddress" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://www.amazon.co.uk/</Value>
+    </Setting>
+    <Setting Name="ShortWaitInSeconds" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
     </Setting>
   </Settings>
 </SettingsFile>
