--- a/ForthDemo_v1.csproj
+++ b/ForthDemo_v1.csproj
@@ -62,6 +62,7 @@
     <Compile Include="BasePages\BaseAmazonPage.cs" />
     <Compile Include="Enums\Departments.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Helpers\CurrencyConvertor.cs" />
     <Compile Include="Interfaces\IClickable.cs" />
     <Compile Include="Interfaces\IDropDown.cs" />
     <Compile Include="PageObjects\ClickableObjects\ClickableObject.cs" />
@@ -106,9 +107,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
